--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "ts-node -P tsconfig.server.json server/index.ts",
-    "postinstall": "prisma generate"
+    "server": "ts-node -P tsconfig.server.json server/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.90.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -39,7 +37,6 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
-    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.3",
